[workspace]
members = [
    "anychain-core",
    "anychain-cli",
    "anychain-api",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Iago Ferreira <iago-ferreira@outlook.com>"]

[workspace.dependencies]
anychain-core = { path = "anychain-core" }

# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# crypto
sha2 = "0.10"
digest = "0.10"

# storage
sled = "0.34"

# errors
thiserror = "1.0"
anyhow = "1.0"

# logging
log = "0.4"
env_logger = "0.11"

# async
tokio = { version = "1", features = ["full"] }
axum = "0.7"

# cli
clap = { version = "4", features = ["derive", "env"] }
