[package]
name = "anychain-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "REST API server for the anychain blockchain"

[[bin]]
name = "anychain-api"
path = "src/main.rs"

[dependencies]
anychain-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
