[package]
name = "anychain-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "Core blockchain library for anychain"

[dependencies]
serde = { workspace = true }
bincode = { workspace = true }
sha2 = { workspace = true }
digest = { workspace = true }
sled = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
